# ccpp

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  pytest.ini  setup.sh
configs/: default.yaml  dev.yaml  lora_stage1.yaml  lora_stage2.yaml  prod.yaml  stage1_llm.yaml  stage2_llm.yaml
constitutions/: harmless.md  pii_sensitive.md
data/: README.md
data/constitutions/: pii_harmful.md  pii_harmless.md  prompt_template.md
data/scripts/: __init__.py  constitution.py  convert_to_mlx.py  evaluate.py  formatter.py  generator.py  main.py  modifiers.py  stage2_formatter.py  test_generator.py  test_pipeline.py  test_training.py  topics.py
data/synthetic/: raw_conversations.jsonl
data/test_output/: api_calls_20260117_231939.json  conversations_20260117_231939.jsonl  stage1_examples_20260117_231939.jsonl  stage2_examples_20260117_231939.jsonl  summary_20260117_231939.txt
data/training/: stage1.val.jsonl  stage2.jsonl  stage2.train.jsonl  stage2.val.jsonl
docs/: CONFIG.md  SUMMARY.md  TESTING.md  stream.md
papers/: Constitutional Classifiers++.md  Constitutional Classifiers.md
results/: baseline.json  baseline_stage1.json  baseline_stage2.json  eval_log.jsonl  eval_log_stage2.jsonl  stage1_eval_log.jsonl
scripts/: client.py  demo.py  gui_client.py  interactive.py  interactive_realtime.py  nicegui_client.py  setup.sh
src/ccpp/: __init__.py  config.py  logging_config.py  types.py
src/ccpp/augment/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_guard.py  test_heuristics.py  test_input_model.py  test_integration.py  test_llm_harness.py  test_patterns.py  test_stage1_router.py  test_stage2_redactor.py  test_types.py
(+34 files in other folders)
