[project]
name = "ccpp"
version = "0.1.0"
description = "Constitutional Classifiers++ Exchange Classifier for streaming content moderation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "trl>=0.8.0",
    "huggingface-hub>=0.22.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    # LLM backends (Phase 0)
    "ollama>=0.1.0",  # Local models via Ollama
    "anthropic>=0.18.0",  # Claude API
    "openai>=1.12.0",  # GPT API
    # Data generation (Phase 1)
    "faker>=24.0.0",  # Synthetic PII generation
    # Interactive client
    "rich>=13.7.0",  # Terminal UI
    "python-dotenv>=1.0.0",  # Load .env files
    "blessed>=1.20.0",  # Terminal input handling
    "gradio>=4.0.0",  # GUI client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",  # Coverage reporting
    "pytest-mock>=3.12.0",  # Mocking helpers
    "ruff>=0.3.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
mlx = [
    # MLX fine-tuning (Mac M-series only)
    "mlx>=0.4.0; platform_machine == 'arm64'",
    "mlx-lm>=0.4.0; platform_machine == 'arm64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccpp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[project.scripts]
ccpp-gui = "scripts.gui_client:main"
